<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/layout1"
        android:layout_height="100dp">

        <TextView
            android:layout_width="match_parent"
            android:text="Add Event"
            android:id="@+id/textView3"
            android:textSize="15pt"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/layout4"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content">

        <Button
            android:layout_height="match_parent"
            android:text="Add"
            android:id="@+id/addButton"
            android:layout_weight="1"
            android:layout_width="match_parent" />

        <Button
            android:layout_height="match_parent"
            android:text="Calculate"
            android:id="@+id/calculateButton"
            android:layout_above="@+id/textView3"
            android:layout_weight="1"
            android:layout_width="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/layout2"
        android:layout_height="300dp"
        android:layout_below="@+id/layout1"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="0.23"
            android:layout_height="49dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Event Name:"
                android:id="@+id/event" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:id="@+id/eventEntry"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="0.39"
            android:layout_height="50dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="298dp"
                android:layout_height="wrap_content">

                <SeekBar
                    android:id="@+id/eventRateBar"
                    android:layout_width="301dp"
                    android:layout_marginLeft="30dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text=""
                    android:id="@+id/ratePercentage"
                    android:layout_width="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_height="50dp" />
            </LinearLayout>

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Stress Rating (Min 1 - Max 10)"
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/layout3"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/layout2"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_height="36dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Date:"
                    android:layout_marginLeft="10dp"
                    android:textAlignment="center"
                    android:id="@+id/date"
                    android:layout_width="100dp" />

                <EditText
                    android:inputType="date"
                    android:ems="2"
                    android:id="@+id/dayEntry"
                    android:layout_height="50dp"
                    android:maxLength="2"
                    android:hint="dd"
                    android:textAlignment="center"
                    android:layout_weight="2"
                    android:layout_width="25dp" />

                <TextView
                    android:text="/"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="1" />

                <EditText
                    android:inputType="date"
                    android:ems="2"
                    android:id="@+id/monthEntry"
                    android:layout_height="50dp"
                    android:maxLength="2"
                    android:textAlignment="center"
                    android:hint="mm"
                    android:layout_weight="2"
                    android:layout_width="30dp" />

                <TextView
                    android:text="/"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:layout_weight="1" />

                <EditText
                    android:inputType="date"
                    android:ems="4"
                    android:id="@+id/yearEntry"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:minEms="4"
                    android:maxLength="4"
                    android:textAlignment="center"
                    android:layout_marginRight="20dp"
                    android:hint="yyyy"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
