<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:id="@+id/nextbtn"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="43dp"
        android:layout_marginEnd="41dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textView2"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/question"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/radioGroup"
        android:layout_width="310dp"
        android:layout_height="50dp" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_above="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignEnd="@+id/longtermRateBar"
        android:checkedButton="@+id/truebutton">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="True"
            android:id="@+id/truebutton"
            android:layout_marginBottom="58dp" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="False"
            android:id="@+id/falseButton"/>

    </RadioGroup>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longtermRateBar"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="33dp"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignEnd="@+id/nextbtn"
        android:max="10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Stress Rating (Min 1 - Max 10)"
        android:id="@+id/textView2"
        android:layout_marginStart="39dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_height="20dp"
        android:id="@+id/rateValue"
        android:layout_alignTop="@+id/longtermRateBar"
        android:layout_toEndOf="@+id/longtermRateBar"
        android:layout_width="20dp" />

    <TextView
        android:layout_height="wrap_content"
        android:id="@+id/textView45"
        android:layout_alignTop="@+id/longtermRateBar"
        android:layout_toEndOf="@+id/longtermRateBar"
        android:layout_width="20dp" />

    <TextView
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/desc_survey"
        android:layout_below="@+id/question"
        android:layout_alignStart="@+id/question" />

    <TextView
        android:layout_height="30dp"
        android:id="@+id/qNum"
        android:layout_width="30dp"
        android:gravity="center"
        android:layout_alignTop="@+id/question"
        android:layout_toStartOf="@+id/question" />
</RelativeLayout>
