...
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SeekBar
                android:layout_width="261dp"
                android:layout_height="43dp"
                android:id="@+id/bucketSeek"
                android:progress="5"
                android:max="10"
                android:layout_gravity="center_vertical" />

            <Button
                android:text="Actual rating"
...
